# pane

./: .gitignore  Cargo.toml  MODAL_INPUT_TEST.md  README.md
.bmad-core/: install-manifest.yaml
docs/: architecture.md  brief.md  prd.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: 0-overview.md  1-goals.md  2-user-stories.md  3-feature-requirements-mvp.md  4-technical-specification-deeper.md  5-non-goals-mvp.md  6-success-criteria.md  7-roadmap-high-level.md  epic-1.md  epic-2.md  epic-3.md  epic-4.md  epic-5.md  index.md
docs/qa/: epic-1-qa-session-summary.md  epic-1-stories-1.1-1.2-comparison-report.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  2.7.story.md  3.1.story.md  3.2.story.md  3.3.story.md  UX-개선-제안.md  (+10 more)
examples/: test_config.rs  test_discovery.rs
homebrew-tap/: LICENSE  README.md
scripts/: build-release.sh  install.sh  uninstall.sh
skills/claude-tips/: AUTHORING_GUIDE.md  Cargo.toml
skills/claude-tips/data/: claude-tips.yaml
skills/claude-tips/src/: app.rs  main.rs  model.rs  parser.rs  ui.rs
src/: app.rs  config.rs  context.rs  i18n.rs  input.rs  lib.rs  main.rs  search.rs  state.rs  terminal.rs
tests/: claude_tips_e2e.rs  integration_tests.rs
(+71 files in other folders)
