[package]
name = "claude-tips"
version = "0.1.0"
edition = "2021"
authors = ["Pane Contributors"]
description = "Claude Code Tips Viewer - bundled skill for Pane"
license = "MIT"

[[bin]]
name = "claude-tips"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
anyhow = "1.0"
ratatui = "0.26.0"
crossterm = "0.27.0"
